# docs/swagger.yaml
@@ -28,6 +28,8 @@ definitions:
         type: number
       city:
         type: string
+      created_by:
+        type: integer
       price:
         type: number
       property_address:
@@ -53,11 +55,17 @@ definitions:
         type: integer
       id:
         type: integer
+      latitude:
+        type: number
+      longitude:
+        type: number
       price:
         type: number
       property_address:
         type: string
       property_description:
+        type: string
+      property_status:
         type: string
       title:
         type: string
