# internal/handler/property/docs_dto.go
@@ -13,6 +13,7 @@ type PropertyCreateDoc struct {
 	Area                float64 `json:"area"`
 	PropertyAddress     string  `json:"property_address"`
 	City                string  `json:"city"`
+	CreatedBy           int     `json:"created_by"`
 }
 
 type PropertyDTODoc struct {
@@ -24,7 +25,10 @@ type PropertyDTODoc struct {
 	Price               float64   `json:"price"`
 	Area                float64   `json:"area"`
 	PropertyAddress     string    `json:"property_address"`
+	Latitude            float64   `json:"latitude"`
+	Longitude           float64   `json:"longitude"`
 	City                string    `json:"city"`
+	PropertyStatus      string    `json:"property_status"`
 	CreatedBy           int       `json:"created_by"`
 	CreatedAt           time.Time `json:"created_at"`
 	UpdatedAt           time.Time `json:"updated_at"`
